<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/grad_bg"
    tools:context="com.trainer.shruty.personaltrainer.Login">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/info"/>
        <!--android:layout_centerHorizontal="true"-->
        <!--android:scaleType="centerCrop"-->
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intro_app"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_uname"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="3dp"
            android:hint="@string/uname_hint"
            android:drawableLeft="@drawable/noun_user_32107"
            android:scaleType="centerCrop"
            android:drawablePadding="15dp"
            android:text="Shruty"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:inputType="textNoSuggestions"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:textColor="@android:color/white"
            android:background="@drawable/border"/>

        <EditText
            android:id="@+id/txt_pswrd"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="3dp"
            android:hint="@string/pswrd_hint"
            android:drawableLeft="@drawable/noun_password_93061"
            android:drawablePadding="15dp"
            android:text="1234"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/border"/>
        <TextView
            android:id="@+id/txt_error"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text=""
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginTop="0dp"
            android:textColor="#FF0000"/>
        <TextView
            android:id="@+id/txt_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/login"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="#f76b1c"
            android:background="@drawable/border2"
            android:clickable="true"
            android:onClick="login"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
